# ProjectPortfolio_3.0

./: .gitignore  README.md
claude_project_template/: CLAUDE.md
implementation_templates/: Data_Engineering_SOP.docx  de_technical_proposal.html
open_weather/: .env.example  .gitignore  README.md  RELEASE.md  TODO.md  api_reference.md  architecture.md  data_dictionary.md  docker-compose.yml  pyproject.toml  query_duckdb.py  unit_testing_guide.md
open_weather/.kilocode/rules/: etl_rules.md
open_weather/open_weather_sources/: bronze_loader.py  config.py  extraction.py  pipeline_runner.py  weather_source.py
open_weather/schema/: test_weather_current.schema.yaml
open_weather/tests/: test_bronze_loader.py  test_extraction.py  test_weather_api.py  test_weather_mock.py
open_weather/tests/schema/: test_weather_current.schema.yaml
research_to_podcast/: .dockerignore  .env.example  .gitignore  CLAUDE.local.md  CLAUDE.md  Dockerfile  README.md  app.py  generate_audio_sample.py  requirements.txt
research_to_podcast/.claude/: settings.json
research_to_podcast/docs/: SOP.md
research_to_podcast/src/: agents.py  audio.py  logger.py  pipeline.py
research_to_podcast/tests/: test_agents.py  test_audio.py
weather_forecaster/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dagster  IMPROVEMENTS.md  README.md  RELEASE.md  TODO.md  api_reference.md  architecture.md  data_dictionary.md  deployment.md  docker-compose.dagster.yml  docker-compose.yml  pyproject.toml  requirements-dagster.txt  requirements-dev.txt  requirements.txt  workspace.yaml
(+78 files in other folders)
